--- a/SettingsAnalyzer/pom.xml
+++ b/SettingsAnalyzer/pom.xml
@@ -6,7 +6,7 @@
 
     <groupId>com.gettaxi.settings</groupId>
     <artifactId>SettingsAnalyzer</artifactId>
-    <version>1.0-SNAPSHOT</version>
+    <version>1.0</version>
 
     <dependencies>
         <!-- https://mvnrepository.com/artifact/mysql/mysql-connector-java -->
